--- a/VirtoCommerce.QuoteModule.Web/Content/css/quoteModule.css
+++ b/VirtoCommerce.QuoteModule.Web/Content/css/quoteModule.css
@@ -20,3 +20,25 @@
     background: #dee9f0;
     font-size: 12px;
 }
+
+/* Quote status */
+.vc-quote .quote-status
+{
+    background: #43b0e6;
+    border-bottom: 1px solid #dedede;
+    color: #fff;
+    margin: 0 -20px;
+    padding: 10px 20px;
+}
+
+    .vc-quote .quote-status .status
+    {
+        font-size: 15px;
+        font-weight: 500;
+        margin: 0 0 5px;
+    }
+
+    .vc-quote .quote-status .reason
+    {
+        font-size: 12px;
+    }
